slowly adding question plugin support

--- a/app/views/issues/_history.html.erb
+++ b/app/views/issues/_history.html.erb
@@ -7,6 +7,7 @@
 	{:label => :label_history_tab_all, :name => 'history_all'}, 
 	{:label => :label_history_tab_activity, :name => 'history_activity'},
 	{:label => :label_history_tab_comments, :name => 'history_comments'},
+	{:label => :label_tabtime_questions, :name => 'tabtime_questions'},
 	{:label => :label_history_tab_private, :name => 'history_private'},
 	{:label => :label_history_tab_time, :name => 'tabtime_time'},
 	] %> 
